fix card icons overflowing

--- a/style.css
+++ b/style.css
@@ -1,6 +1,16 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto);
 
 /* body */
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
 body {
   min-height: 100vh;
   margin: 0;
@@ -179,14 +189,18 @@ button {
 #project-cards {
   display: grid;
   grid-area: 1 / 1 / 3 / 2;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(auto-fit, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-rows: repeat(3, 1fr);
+
   gap: 1.5rem;
   margin-right: 0;
   background-color: var(--main-bg-color);
 }
 
 .project-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
   background-color: var(--light-bg-color);
   border-radius: 10px;
   border-left: solid 6px #4845d2;
@@ -194,11 +208,21 @@ button {
   box-shadow: var(--box-shadow);
 }
 
+.project-card h2 {
+  margin-bottom: 1rem;
+}
+
+.project-card p {
+  color: var(--grey-text-color);
+  margin: 0;
+}
+
 .project-icons {
   display: flex;
   justify-content: flex-end;
+  align-items: flex-end;
   gap: 1.5rem;
-  margin-top: 4rem;
+  margin: 1.5rem 0.5rem 0rem;
 }
 
 #announcement-card {
@@ -226,7 +250,6 @@ button {
   background-color: var(--light-bg-color);
   border-radius: 10px;
   height: fit-content;
-
   padding: 2rem;
   box-shadow: var(--box-shadow);
 }
